--- a/config/database.yml
+++ b/config/database.yml
@@ -4,25 +4,34 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: dev_mejorandotusalud
+  host: localhost
   pool: 5
   timeout: 5000
+  username: postgres
+  password: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: test_mejorandotusalud
+  host: localhost
   pool: 5
   timeout: 5000
+  username: postgres
+  password: postgres
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: prod_mejorandotusalud
+  host: localhost
   pool: 5
   timeout: 5000
+  username: postgres
+  password: postgres
 
 cucumber:
   <<: *test
